# copier-org-_-jinja2-copier-extension

./: pyproject.toml
.github/workflows/: tests.yml
